[tool.poetry]
name = "python-tidal-experimental"
version = "0.1.0"
description = "Experimental python tidal api"
authors = ["John Maximilian <2e0byo@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_tidal_experimental"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "7"
pytest-sugar = "^1.0.0"
pytest-cases = "^3.8.2"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
