[tool.poetry]
name = "python-tidal-experimental"
version = "0.1.0"
description = "Experimental python tidal api"
authors = ["John Maximilian <2e0byo@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_tidal_experimental"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "7"
pytest-sugar = "^1.0.0"
pytest-cases = "^3.8.2"
pytest-mock = "^3.12.0"
polyfactory = "^2.14.1"
pytest-cov = "^4.1.0"
pydantic-extra-types = "^2.5.0"
pycountry = "^23.12.11"


[tool.poetry.group.httpx.dependencies]
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.docformatter]
recursive = true
black = true

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

[tool.ruff]
select = [
    "E", # Pycodestyle
    "F", # Pyflakes
    "T20", # Print
    "TRY002", # Create own exception
    "TRY004", # Type check without TypeError
    "TRY201", # verbose raise
    "TRY301", # raise with try
    "TRY302", # useless try except
    "TRY400", # logging.error used over logging.exception
    "TRY401", # verbose log message
    "Q", # Quotes
    "DTZ", # Naive datetime
]