[project]
name = "littoral"
version = "0.1.0"
description = "Experimental zero-IO python tidal api"
authors = [
    {name = "John Maximilian", email = "2e0byo@gmail.com"},
]
dependencies = [
    "pydantic>=2.6.1",
    "pycountry>=23.12.11",
    "pydantic-extra-types>=2.5.0",
]
requires-python = ">=3.11,<4.0"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
testing = [
    "polyfactory>=2.14.1",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.docformatter]
recursive = true
black = true

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

[tool.ruff]
lint.select = [
    "E", # Pycodestyle
    "F", # Pyflakes
    "T20", # Print
    "TRY002", # Create own exception
    "TRY004", # Type check without TypeError
    "TRY201", # verbose raise
    "TRY301", # raise with try
    "TRY302", # useless try except
    "TRY400", # logging.error used over logging.exception
    "TRY401", # verbose log message
    "Q", # Quotes
    "DTZ", # Naive datetime
]

[tool.pytest.ini_options]
addopts = "--cov=littoral --cov-branch --cov-report=term-missing --cov-report=html"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest==7",
    "pytest-sugar>=1.0.0",
    "pytest-cases>=3.8.2",
    "pytest-mock>=3.12.0",
    "polyfactory<3.0.0,>=2.14.1",
    "pytest-cov>=4.1.0",
    "pydantic-extra-types<3.0.0,>=2.5.0",
    "pycountry<24.0.0,>=23.12.11",
    "rich>=13.7.0",
]
httpx = [
    "httpx>=0.26.0",
]

[tool.pdm.build]
includes = ["littoral"]


[tool.isort]
profile = "black"